# TouchMotionOS

./: .gitignore  README.md  flake.nix
auto/: clean  config
config/: binary  bootstrap  common
config/includes.binary/: README.txt
config/package-lists/: base.list.chroot  console.list.chroot  firmware.list.chroot
games/dashlands/: default.nix
launcher/: README.md  default.nix  pubspec.lock.json  pubspec.yaml
launcher/lib/: languages.dart  main.dart  onboarding_state.dart  session.dart
launcher/lib/app/: app_shell.dart
launcher/lib/l10n/: app_en.arb  app_hi.arb  app_kn.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_hi.dart  app_localizations_kn.dart  app_localizations_ml.dart  app_localizations_ta.dart  app_localizations_te.dart  app_ml.arb  app_ta.arb  app_te.arb
launcher/lib/pages/: apps_page.dart  home_page.dart  settings_page.dart
launcher/lib/router/: router.dart
launcher/lib/screens/: home_screen.dart  language_screen.dart  organisation_screen.dart  patient_profile_screen.dart  physio_screen.dart  settings_screen.dart  slide1.dart  slide10.dart  slide11.dart  slide12.dart  slide13.dart  slide14.dart  slide15.dart  slide16.dart  slide2.dart  slide3.dart  slide4.dart  slide5.dart  slide6.dart  slide7.dart  slide8.dart  slide9.dart
launcher/lib/theme/: app_theme.dart
launcher/linux/: CMakeLists.txt
launcher/test/: widget_test.dart
os/: flake.nix
platform/: Cargo.toml  default.nix
platform/crates/network/: Cargo.toml
platform/crates/network/src/: lib.rs  main.rs
tools/simulator/: run.sh
(+44 files in other folders)
