[package]
name = "tomoro-network"
version = "0.1.0"
edition = "2021"
description = "Network detection for the TOMORO appliance: enumerates ethernet/wifi interfaces and reports link state as JSON."

[[bin]]
name = "tomoro-net"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
